--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     }
   ],
   "require": {
-    "php": ">=7.0.0",
-    "laravel/laravel": "5.5.*"
+    "php": ">=7.0.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.0"
